mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_invalid_int.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Invalid integer literal: 123abc
--> test_scripts/error_cases/lexer_invalid_int.mux:2:10
   |
 2 | auto n = 123abc
   |          ^^^^^^
   |
= help: Integer literals cannot contain letters. Variable names must not start with a digit.
